@startuml

title __CONTROLLER's Class Diagram__\n

  namespace ba.unsa.etf.rpr {
    namespace Controller {
      class ba.unsa.etf.rpr.Controller.AboutController {
          + content : Region
          + gitBtn : Hyperlink
          + git()
          + initialize()
          ~ setBackgroundPositions()
      }
    }
  }
  

  namespace ba.unsa.etf.rpr {
    namespace Controller {
      class ba.unsa.etf.rpr.Controller.AdminController {
          + add : Button
          + btt : Button
          + datum : DatePicker
          + dlt : Button
          + ex : Button
          + iz : Button
          + lb3 : Label
          + lv : ListView
          + lv2 : ListView
          + o : List<String>
          + tf1 : TextField
          + tf2 : TextField
          + tfdlt : TextField
          + addUser()
          + delete()
          + initialize()
          + logut()
          + report()
          + submit()
      }
    }
  }
  

  namespace ba.unsa.etf.rpr {
    namespace Controller {
      class ba.unsa.etf.rpr.Controller.Controller {
          + ab : MenuItem
          + bs : MenuItem
          + eng : MenuItem
          + fr : MenuItem
          + lbl : TextField
          + login : Button
          + pass : PasswordField
          + time : Label
          + aboutWindow()
          + actionExit()
          + actionLogin()
          + bosnianLanguage()
          + englishLanguage()
          + frenchLanguage()
          ~ initialize()
      }
    }
  }
  

  namespace ba.unsa.etf.rpr {
    namespace Controller {
      class ba.unsa.etf.rpr.Controller.FormController {
          + cb : CheckBox
          + ex : Button
          + p1 : PasswordField
          + p2 : PasswordField
          + sb : Button
          + tf1 : TextField
          + tf2 : TextField
          + tf3 : TextField
          + exit()
          + submit()
          ~ initialize()
      }
    }
  }
  

  namespace ba.unsa.etf.rpr {
    namespace Controller {
      class ba.unsa.etf.rpr.Controller.WorkTimeController {
          + active : boolean
          + in : Button
          + out : Button
          + ow : RadioButton
          + rw : RadioButton
          + time : Label
          + check()
          + endWorking()
          + homeWork()
          + initialize()
          + logut()
          + onSite()
          + setController()
          + startWorking()
      }
    }
  }
  

  ba.unsa.etf.rpr.Controller.AdminController o-- ba.unsa.etf.rpr.Dao : dao
  ba.unsa.etf.rpr.Controller.Controller o-- ba.unsa.etf.rpr.Dao : dao
  ba.unsa.etf.rpr.Controller.FormController o-- ba.unsa.etf.rpr.Dao : dao
  ba.unsa.etf.rpr.Controller.WorkTimeController o-- ba.unsa.etf.rpr.Controller.Controller : c1
  ba.unsa.etf.rpr.Controller.WorkTimeController o-- ba.unsa.etf.rpr.WorkTime : wk
  ba.unsa.etf.rpr.Controller.WorkTimeController o-- ba.unsa.etf.rpr.Dao : dao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
